react.js is included in the project

--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Hola CV</h1>
+    <div id="app"></div>
+
+    <script type="text/babel">
+        function App() {
+            return <h1>Hello World!</h1>;
+        }
+
+        const e = React.createElement;
+        const domContainer = document.querySelector('#app');
+        const root = ReactDOM.createRoot(domContainer);
+        root.render(e(App));
+
+    //   ReactDOM.render(<App />, document.getElementById('app'))
+    </script>
+
+    <!-- Cargar React. -->
+    <!-- Nota: cuando se despliegue, reemplazar "development.js" con "production.min.js". -->
+    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+    <!-- Cargamos nuestro componente de React. -->
+    <!--<script src="like_button.js"></script> -->
+
 </body>
+
 </html>
