--- a/index.html
+++ b/index.html
@@ -6,35 +6,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+    <!-- Cargar React. -->
+    <!-- Nota: cuando se despliegue, reemplazar "development.js" con "production.min.js". -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+
+    <!-- Cargamos nuestro componente de React. -->
+    <script type="text/babel" src="./components/button.js"></script>
 </head>
 
 <body>
     <div id="app"></div>
 
+
+
     <script type="text/babel">
+        // import { Button } from "./components/button.js";
+        // const Button = require("./components/button.js")
+
         function App() {
-            return <h1>Hello World!</h1>;
+            return (
+                <div className="container">
+                    <Button />
+                </div>
+            );
         }
 
-        const e = React.createElement;
+        // const e = React.createElement;
         const domContainer = document.querySelector('#app');
         const root = ReactDOM.createRoot(domContainer);
-        root.render(e(App));
+        // root.render(e(App));
+        root.render(<App />);
 
     //   ReactDOM.render(<App />, document.getElementById('app'))
     </script>
 
-    <!-- Cargar React. -->
-    <!-- Nota: cuando se despliegue, reemplazar "development.js" con "production.min.js". -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
-    <!-- Cargamos nuestro componente de React. -->
-    <!--<script src="like_button.js"></script> -->
+    
 
 </body>
 
